<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Mobility App</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_create_profile">Edit Profile</string>
    <string name="title_activity_file_report">File Report</string>
    <string name="details">Please edit your details below</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="phoneNum">Phone Number</string>
    <string name="disability">Disability</string>
    <string name="gender">Select your gender</string>
    <string name="title_activity_view_report">viewReport</string>
    <string name="title_activity_manage_reports">manageReports</string>
    <string name="title_activity_view_facilities">viewFacilities</string>
    <string name="title_activity_view_facility">viewFacility</string>
    <string name="title_activity_view_events">viewEvents</string>
    <string name="title_activity_view_event">viewEvent</string>
    <string name="title_activity_view_user_profile">viewUserProfile</string>
    <string name="title_activity_create_event">CreateEvent</string>
    <string name="title_activity_create_facility">CreateFacility</string>
    <string name="title_activity_own_reports">ownReports</string>
    <string name="title_activity_own_events">ownEvents</string>
    <string name="title_activity_my_activities">myActivities</string>
    <string name="title_activity_create_admin">createAdmin</string>
    <string name="title_activity_create_suggestion">createSuggestion</string>
    <string name="title_activity_list_suggestions">listSuggestions</string>
</resources>
