<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_create_profile"
    tools:context="com.parse.starter.CreateProfileActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textStyle="bold"
        android:id="@+id/textView" />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:text="@string/name"
        android:id="@+id/nameText"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Your Full Name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameText"
        android:id="@+id/nameEdit"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameEdit"
        android:text="@string/age"
        android:id="@+id/ageText"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ageText"
        android:hint="Enter Your Age"
        android:inputType="number"
        android:id="@+id/ageEdit"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ageEdit"
        android:text="@string/phoneNum"
        android:id="@+id/numText"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numText"
        android:hint="Phone Number"
        android:id="@+id/phoneNumEdit"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneNumEdit"
        android:text="@string/disability"
        android:id="@+id/disabilityText"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="State Your Disability"
        android:id="@+id/disabilityEdit"
        android:layout_below="@+id/disabilityText"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_below="@id/disabilityEdit"
        android:id="@+id/genderText"
        />


    <CheckBox android:id="@+id/checkbox_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Male"
        android:onClick="onCheckboxClicked"
        android:layout_below="@+id/genderText"/>

    <CheckBox android:id="@+id/checkbox_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Female"
        android:onClick="onCheckboxClicked"
        android:layout_below="@+id/checkbox_male"/>








</RelativeLayout>
